# uTray

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  utray.rc
